# Workout_Api

./: Makefile  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 09373462f115_init_db.py  0d52aa50872e_init_db.py  ac59754cd8a2_init_db.py
workout_api/: main.py
workout_api/atleta/: controller.py  models.py  schemas.py
workout_api/categorias/: controller.py  models.py  schemas.py
workout_api/centro_treinamento/: controller.py  models.py  schemas.py
workout_api/configs/: settings.py
workout_api/contrib/: dependencies.py  routers.py  schemas.py
